# NeutronCapture2

./: .cproject  .project  CMakeLists.txt  NeutronCapture2.cc  README  README.md
Debug/: makefile  sources.mk  subdir.mk
Debug/analysis/: subdir.mk
Debug/src/: subdir.mk
JOBS/: template_1.mac
JOBS/Job1/: create_macros.sh  job1.sh
JOBS/Job2/: create_macros.sh  job2.sh
analysis/: Plot_01.C  Plot_02.C
beam/: conical-beam.mac  fast-neutron.mac  square-beam.mac  thermal-neutron.mac
include/: N2ActionInitialization.hh  N2Analysis.hh  N2DetectorConstruction.hh  N2DetectorMessenger.hh  N2EventAction.hh  N2Material.hh  N2PrimaryGeneratorAction.hh
mac/: init.mac  run1.mac  vis1.mac  vis2.mac
src/: N2ActionInitialization.cc  N2DetectorConstruction.cc  N2DetectorMessenger.cc  N2EventAction.cc  N2Material.cc  N2PrimaryGeneratorAction.cc
